force-app/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Billing_Account_Number__c</fullName>
    <label>Billing Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>