force-app/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Consolidation_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Consolidation_Type__c</fullName>
    <label>Consolidation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>