force-app/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>