force-app/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Sender_Tax_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Tax_ID_Type__c</fullName>
    <label>Sender Tax ID Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>