force-app/main/default/objects/zkmulti__MultiPackageShipment__c/recordTypes/zkmulti__MultiPackage.recordType-meta.xml
<RecordType>
    <fullName>zkmulti__MultiPackage</fullName>
    <active>true</active>
    <label>Multi Package</label>
</RecordType>