force-app/main/default/objects/zkmulti__MultiPackageShipment__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>zkmulti__Deleted__c</columns>
    <columns>zkmulti__Status__c</columns>
    <columns>zkmulti__Clearance_Facility_Location_Id__c</columns>
    <columns>zkmulti__Consolidation_Index__c</columns>
    <columns>zkmulti__Consolidation_Type__c</columns>
    <columns>zkmulti__Ship_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>